force-app/main/default/objects/Selection_Sheet__c/Selection_Sheet__c.object-meta.xml
<CustomObject>
    <label>Selection Sheet</label>
    <nameField>
        <label>Selection Sheet #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>