force-app/main/default/objects/Selection_Sheet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Selection Sheets</relationshipLabel>
    <relationshipName>Selection_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>