force-app/main/default/objects/Selection_Sheet__c/fields/Date_created_in_SSM__c.field-meta.xml
<CustomField>
    <fullName>Date_created_in_SSM__c</fullName>
    <label>Date created in SSM</label>
    <type>Date</type>
</CustomField>