force-app/main/default/objects/Selection_Sheet__c/fields/Date_last_modified_in_SSM__c.field-meta.xml
<CustomField>
    <fullName>Date_last_modified_in_SSM__c</fullName>
    <label>Date last modified in SSM</label>
    <type>Date</type>
</CustomField>