force-app/main/default/objects/Selection_Sheet__c/fields/INAME2__c.field-meta.xml
<CustomField>
    <fullName>INAME2__c</fullName>
    <label>INAME2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>