force-app/main/default/objects/Selection_Sheet__c/fields/IName__c.field-meta.xml
<CustomField>
    <fullName>IName__c</fullName>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>