force-app/main/default/objects/Selection_Sheet__c/fields/itemAndProduct__c.field-meta.xml
<CustomField>
    <fullName>itemAndProduct__c</fullName>
    <formula>Selection_Sheet_ID__c +&apos;-&apos;+  SS_Line_Number__c + &apos;-&apos;+ Product_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>itemAndProduct</label>
    <type>Text</type>
</CustomField>