force-app/main/default/objects/Selection_Sheet__c/fields/Kerridge_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Kerridge_Account_ID__c</fullName>
    <label>Kerridge Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>