force-app/main/default/objects/Selection_Sheet__c/fields/NOTE__c.field-meta.xml
<CustomField>
    <fullName>NOTE__c</fullName>
    <label>NOTE</label>
    <type>TextArea</type>
</CustomField>