force-app/main/default/objects/Selection_Sheet__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Selection Sheets</relationshipLabel>
    <relationshipName>Selection_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>