force-app/main/default/objects/Selection_Sheet__c/fields/Product_Added__c.field-meta.xml
<CustomField>
    <fullName>Product_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Added</label>
    <type>Checkbox</type>
</CustomField>