force-app/main/default/objects/Selection_Sheet__c/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <externalId>true</externalId>
    <label>Item name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>