force-app/main/default/objects/Selection_Sheet__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>