force-app/main/default/objects/Selection_Sheet__c/fields/Selection_Sheet_ID__c.field-meta.xml
<CustomField>
    <fullName>Selection_Sheet_ID__c</fullName>
    <label>Selection Sheet ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>