force-app/main/default/objects/Selection_Sheet__c/fields/SS_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>SS_Line_Number__c</fullName>
    <label>SS Line Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>