force-app/main/default/objects/Selection_Sheet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Inquiry/Planning</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Finalized</fullName>
                <isActive>false</isActive>
                <label>Finalized</label>
            </value>
            <value>
                <fullName>Inquiry - Planning</fullName>
                <isActive>false</isActive>
                <label>Inquiry - Planning</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <isActive>false</isActive>
                <label>Lost</label>
            </value>
            <value>
                <fullName>On Order</fullName>
                <isActive>false</isActive>
                <label>On Order</label>
            </value>
            <value>
                <fullName>Partial Order</fullName>
                <isActive>false</isActive>
                <label>Partial Order</label>
            </value>
            <value>
                <fullName>nquiry - Planning</fullName>
                <isActive>false</isActive>
                <label>nquiry - Planning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>