force-app/main/default/objects/Selection_Sheet__c/fields/unique_key_selection__c.field-meta.xml
<CustomField>
    <fullName>unique_key_selection__c</fullName>
    <externalId>true</externalId>
    <label>unique key selection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>