force-app/main/default/objects/Selection_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity__c</columns>
    <columns>Expiration_date__c</columns>
    <columns>INAME2__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Product_name__c</columns>
    <columns>Selection_Sheet_ID__c</columns>
    <columns>SS_Line_Number__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>